Fix wrapped title highlight padding

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,12 @@
   padding-right: 1rem;
 }
 
+/* Ensures inline highlights (background + padding) render consistently across wrapped lines. */
+.box-decoration-clone {
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+}
+
 @media (min-width: 30rem) {
   .site-width {
     padding-left: 1.5rem;
